--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
 <link rel="icon" type="image/x-icon" href="./Transparent Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Services - The Little Baker Kitchen</title>
+    <title>FAQ - The Little Baker Kitchen</title>
+    <link rel="icon" type="image/png" sizes="4200x3000" href="assets/img/brands/Transparent%20Logo.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Chelsea+Market&amp;display=swap">
@@ -19,12 +20,12 @@
 
 <body>
     <nav class="navbar navbar-expand-md sticky-top bg-primary navbar-shrink py-3 navbar-light" id="mainNav" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><img src="assets/img/Transparent%20Logo.png" style="height: 55px;" width="82" height="55"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><img src="assets/img/brands/NewLogo.png" style="height: 55px;" width="59" height="55"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link link-light" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link link-light pricing-nav" href="pricing.html">Pricing</a></li>
-                    <li class="nav-item"><a class="nav-link link-light" href="testimonials.html">Testimonials</a></li>
+                    <li class="nav-item"><a class="nav-link active link-light" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
                 </ul><a class="btn btn-secondary link-light shadow" role="button" href="contacts.html">Contact Us</a>
             </div>
         </div>
@@ -36,28 +37,99 @@
                     <h1 class="fw-bold" style="font-family: Lobster, serif;">Frequently Asked Questions</h1>
                 </div>
             </div>
+            <h2 style="font-family: Lobster, serif;">General Questions</h2>
             <div class="accordion" role="tablist" id="accordion-1">
                 <div class="accordion-item">
-                    <h2 class="accordion-header" role="tab"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-1" aria-expanded="true" aria-controls="accordion-1 .item-1">Question 1</button></h2>
-                    <div class="accordion-collapse collapse show item-1" role="tabpanel" data-bs-parent="#accordion-1">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-1" aria-expanded="false" aria-controls="accordion-1 .item-1">What types of cake and pastries do you offer?</button></h2>
+                    <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-1">
                         <div class="accordion-body">
-                            <p class="mb-0">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            <p class="mb-0">We offer a wide range of cakes including birthday cakes, wedding cakes, themed cakes, and more. Our pastry selection includes cupcakes, cookies, french macarons, and a variety of seasonal treats. They can be customized based on your event theme and all our products are made with high-quality ingredients to ensure the best taste and presentation.</p>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-2" aria-expanded="false" aria-controls="accordion-1 .item-2">Accordion Item</button></h2>
-                    <div class="accordion-collapse collapse item-2" role="tabpanel" data-bs-parent="#accordion-1">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-2" aria-expanded="true" aria-controls="accordion-1 .item-2">Do you offer customized cake designs?</button></h2>
+                    <div class="accordion-collapse collapse show item-2" role="tabpanel" data-bs-parent="#accordion-1">
                         <div class="accordion-body">
-                            <p class="mb-0">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            <p class="mb-0">Absolutely! We specialize in creating customized cake designs tailored to your preferences. Whether you have a specific theme in mind or want to create something entirely unique, our team is here to bring your vision to life. You can share pictures, sketches, or browse our portfolio for inspiration, and we'll collaborate with you to craft the perfect cake for your special occasion.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h2 style="font-family: Lobster, serif;margin-top: 21px;">Ordering Process</h2>
+            <div class="accordion" role="tablist" id="accordion-2">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-1" aria-expanded="false" aria-controls="accordion-2 .item-1">What are your prices for cake, pastries, and event services?</button></h2>
+                    <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-2">
+                        <div class="accordion-body">
+                            <p class="mb-0">Prices vary depending on the size, complexity of the design, and specific requirements of your order. For a detailed quotation, please send us your ideas and we’ll be happy to provide an estimate. We also offer different party packages for all occasions. If you have a specific budget in mind, just inform us so we can work within your budget too.</p>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-3" aria-expanded="false" aria-controls="accordion-1 .item-3">Accordion Item</button></h2>
-                    <div class="accordion-collapse collapse item-3" role="tabpanel" data-bs-parent="#accordion-1">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-2" aria-expanded="false" aria-controls="accordion-2 .item-2">How do I place an Order?&nbsp;</button></h2>
+                    <div class="accordion-collapse collapse item-2" role="tabpanel" data-bs-parent="#accordion-2">
+                        <div class="accordion-body"><a href="contacts.html">
+                                <p class="mb-0" style="color: rgb(0,0,0);">Just send us a message on any of our social media accounts, viber, or email!</p>
+                            </a></div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-3" aria-expanded="false" aria-controls="accordion-2 .item-3">Where are you located?</button></h2>
+                    <div class="accordion-collapse collapse item-3" role="tabpanel" data-bs-parent="#accordion-2">
                         <div class="accordion-body">
-                            <p class="mb-0">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            <p class="mb-0">We are located at 39 Acacia Drive, Balintawak, Quezon City.&nbsp;You can also find us on google maps “The Little Baker Kitchen”.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-4" aria-expanded="false" aria-controls="accordion-2 .item-4">How far in advance should I order a cake or book a service?</button></h2>
+                    <div class="accordion-collapse collapse item-4" role="tabpanel" data-bs-parent="#accordion-2">
+                        <div class="accordion-body">
+                            <p class="mb-0">We recommend placing your orders at least 5 days in advance for standard cakes and 1-2 weeks for large or highly customized cakes. We will be able to accept your orders as long as there is a slot available in our calendar, so it is best to book in advance to ensure availability.&nbsp;We do accept advance bookings even months ahead.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-5" aria-expanded="false" aria-controls="accordion-2 .item-5">Can I order a cake for same-day delivery?</button></h2>
+                    <div class="accordion-collapse collapse item-5" role="tabpanel" data-bs-parent="#accordion-2">
+                        <div class="accordion-body">
+                            <p class="mb-0">All our cakes and pastries are made to order, ensuring freshness and quality. Due to the custom nature of our products, orders need to be placed in advance to allow sufficient time for preparation and design. Please contact us in advance to discuss your requirements and place your order.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-6" aria-expanded="false" aria-controls="accordion-2 .item-6">Do you require a deposit for orders?</button></h2>
+                    <div class="accordion-collapse collapse item-6" role="tabpanel" data-bs-parent="#accordion-2">
+                        <div class="accordion-body">
+                            <p class="mb-0">Yes, we require a deposit to confirm your order. The deposit amount varies depending on the total cost of the order. This ensures that your date and design are reserved in our schedule.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-7" aria-expanded="false" aria-controls="accordion-2 .item-7">What information do I need to provide when ordering a custom cake?</button></h2>
+                    <div class="accordion-collapse collapse item-7" role="tabpanel" data-bs-parent="#accordion-2">
+                        <div class="accordion-body">
+                            <p class="mb-0">For custom cakes, please provide the event date, cake size, flavor preferences, design ideas or themes, and any special dietary requirements. If you have a picture or sketch of the design, that would be very helpful.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h2 style="font-family: Lobster, serif;margin-top: 21px;">Delivery and Pickup</h2>
+            <div class="accordion" role="tablist" id="accordion-3">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-3 .item-1" aria-expanded="true" aria-controls="accordion-3 .item-1">Do you offer delivery services, and what are your delivery policies?</button></h2>
+                    <div class="accordion-collapse collapse show item-1" role="tabpanel" data-bs-parent="#accordion-3">
+                        <div class="accordion-body">
+                            <p class="mb-0">Yes, we provide delivery services <strong>across Metro Manila</strong>. However, we are not affiliated with any app or delivery service. We use Lalamove, a third-party service, and delivery fees may vary depending on your location. Please send us your delivery details for quotation. Do take note that once your order is handed over to the driver, we are no longer responsible for any damages.<br><br><strong>Additionally, please be aware of the following:</strong><br>- Estimated arrival times may vary due to factors like traffic and weather conditions, and the availability of the rider once dispatched. We can provide an approximate ETA for your delivery.<br><br>- If the rider requests additional fees not communicated by us, you have the right to refuse. The final delivery fee will be confirmed with you before booking.<br><br>- <strong>Please note:</strong> We utilize <strong>Lalamove </strong>as our third-party service provider for deliveries. It’s important to be aware that Lalamove’s riders may engage in double booking. Once your item is in transit, it is no longer under our direct control. While we schedule deliveries as early as possible, exact arrival times depend on the rider’s schedule. For urgent orders, feel free to contact the rider directly to inquire about their current location and estimated time of arrival (ETA).</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-3 .item-2" aria-expanded="false" aria-controls="accordion-3 .item-2">Do you offer customized cake designs?</button></h2>
+                    <div class="accordion-collapse collapse item-2" role="tabpanel" data-bs-parent="#accordion-3">
+                        <div class="accordion-body">
+                            <p class="mb-0">Absolutely! We specialize in creating customized cake designs tailored to your preferences. Whether you have a specific theme in mind or want to create something entirely unique, our team is here to bring your vision to life. You can share pictures, sketches, or browse our portfolio for inspiration, and we'll collaborate with you to craft the perfect cake for your special occasion.</p>
                         </div>
                     </div>
                 </div>
@@ -78,8 +150,8 @@
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">About</h3>
                     <ul class="list-unstyled">
-                        <li><a href="aboutus.html">Company</a></li>
-                        <li><a href="testimonials.html">Testimonials</a></li>
+                        <li><a href="aboutus.html">Our Story</a></li>
+                        <li><a href="index.html#testimonials">Testimonials</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
@@ -91,8 +163,8 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
-                    <div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm bs-icon-circle bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2"><img src="assets/img/TLBK%20Logo.png" style="height: 30px;"></span><span>The Little Baker Kitchen</span></div>
-                    <p class="text-muted"><span style="color: rgb(0, 0, 0); background-color: transparent;">Explore our delicious pastries. Buy now!</span></p>
+                    <div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm bs-icon-circle bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2"><img src="assets/img/brands/TLBK%20Logo.png" style="height: 30px;"></span><span>The Little Baker Kitchen</span></div>
+                    <p class="text-muted">Turning dream celebrations into reality!</p>
                 </div>
             </div>
             <hr>
