--- a/pricing.html
+++ b/pricing.html
@@ -6,6 +6,7 @@
 <link rel="icon" type="image/x-icon" href="./Transparent Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Pricing - The Little Baker Kitchen</title>
+    <link rel="icon" type="image/png" sizes="4200x3000" href="assets/img/brands/Transparent%20Logo.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Chelsea+Market&amp;display=swap">
@@ -19,12 +20,12 @@
 
 <body>
     <nav class="navbar navbar-expand-md sticky-top bg-primary navbar-shrink py-3 navbar-light" id="mainNav" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><img src="assets/img/Transparent%20Logo.png" style="height: 55px;" width="82" height="55"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><img src="assets/img/brands/NewLogo.png" style="height: 55px;" width="59" height="55"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link link-light" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link link-light active pricing-nav" href="pricing.html">Pricing</a></li>
-                    <li class="nav-item"><a class="nav-link link-light" href="testimonials.html">Testimonials</a></li>
+                    <li class="nav-item"><a class="nav-link active link-light" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
                 </ul><a class="btn btn-secondary link-light shadow" role="button" href="contacts.html">Contact Us</a>
             </div>
         </div>
@@ -114,8 +115,8 @@
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">About</h3>
                     <ul class="list-unstyled">
-                        <li><a href="aboutus.html">Company</a></li>
-                        <li><a href="testimonials.html">Testimonials</a></li>
+                        <li><a href="aboutus.html">Our Story</a></li>
+                        <li><a href="index.html#testimonials">Testimonials</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
@@ -127,8 +128,8 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
-                    <div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm bs-icon-circle bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2"><img src="assets/img/TLBK%20Logo.png" style="height: 30px;"></span><span>The Little Baker Kitchen</span></div>
-                    <p class="text-muted"><span style="color: rgb(0, 0, 0); background-color: transparent;">Explore our delicious pastries. Buy now!</span></p>
+                    <div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm bs-icon-circle bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2"><img src="assets/img/brands/TLBK%20Logo.png" style="height: 30px;"></span><span>The Little Baker Kitchen</span></div>
+                    <p class="text-muted">Turning dream celebrations into reality!</p>
                 </div>
             </div>
             <hr>
