--- a/contactus.html
+++ b/contactus.html
@@ -20,13 +20,14 @@
 
 <body>
     <nav class="navbar navbar-expand-md sticky-top bg-primary navbar-shrink py-3 navbar-light" id="mainNav" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><img src="assets/img/brands/NewLogo.png" style="height: 55px;" width="59" height="55"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"><img src="assets/img/brands/Hat.png" width="40" height="40"></span><span style="padding-left: 0px;margin-left: 5px;">TLB Kitchen</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link link-light" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link-light pricing-nav" href="pricing.html">Pricing</a></li>
-                    <li class="nav-item"><a class="nav-link active link-light" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
-                </ul><a class="btn btn-secondary link-light shadow" role="button" href="contacts.html">Contact Us</a>
+                    <li class="nav-item"><a class="nav-link link-light pricing-nav" href="specialties.html">Specialties</a></li>
+                    <li class="nav-item"><a class="nav-link link-light" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="blogs.html"><span style="color: rgb(255, 255, 255);">Blogs</span></a></li>
+                </ul><a class="btn btn-secondary link-light shadow" role="button" href="contactus.html">Contact Us</a>
             </div>
         </div>
     </nav>
@@ -105,9 +106,9 @@
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Services</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Custom Orders</a></li>
-                        <li><a href="#">Pastries</a></li>
-                        <li><a href="#">Party Carts &amp; Events</a></li>
+                        <li><a href="customorders.html">Custom Orders</a></li>
+                        <li><a href="pastries.html">Pastries</a></li>
+                        <li><a href="events.html">Party Carts &amp; Events</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
@@ -120,9 +121,9 @@
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Others</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Blogs</a></li>
+                        <li><a href="blogs.html">Blogs</a></li>
                         <li><a href="faq.html">FAQ</a></li>
-                        <li><a href="contacts.html">Contact Us</a></li>
+                        <li><a href="contactus.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
@@ -149,7 +150,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/smart-forms.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/bold-and-bright.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-baguetteBox.min.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-Lightbox-Gallery.js"></script>
