--- a/faq.html
+++ b/faq.html
@@ -20,13 +20,14 @@
 
 <body>
     <nav class="navbar navbar-expand-md sticky-top bg-primary navbar-shrink py-3 navbar-light" id="mainNav" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><img src="assets/img/brands/NewLogo.png" style="height: 55px;" width="59" height="55"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"><img src="assets/img/brands/Hat.png" width="40" height="40"></span><span style="padding-left: 0px;margin-left: 5px;">TLB Kitchen</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link link-light" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link-light pricing-nav" href="pricing.html">Pricing</a></li>
-                    <li class="nav-item"><a class="nav-link active link-light" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
-                </ul><a class="btn btn-secondary link-light shadow" role="button" href="contacts.html">Contact Us</a>
+                    <li class="nav-item"><a class="nav-link link-light pricing-nav" href="specialties.html">Specialties</a></li>
+                    <li class="nav-item"><a class="nav-link link-light active" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="blogs.html"><span style="color: rgb(255, 255, 255);">Blogs</span></a></li>
+                </ul><a class="btn btn-secondary link-light shadow" role="button" href="contactus.html">Contact Us</a>
             </div>
         </div>
     </nav>
@@ -48,8 +49,8 @@
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header" role="tab"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-2" aria-expanded="true" aria-controls="accordion-1 .item-2">Do you offer customized cake designs?</button></h2>
-                    <div class="accordion-collapse collapse show item-2" role="tabpanel" data-bs-parent="#accordion-1">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-1 .item-2" aria-expanded="false" aria-controls="accordion-1 .item-2">Do you offer customized cake designs?</button></h2>
+                    <div class="accordion-collapse collapse item-2" role="tabpanel" data-bs-parent="#accordion-1">
                         <div class="accordion-body">
                             <p class="mb-0">Absolutely! We specialize in creating customized cake designs tailored to your preferences. Whether you have a specific theme in mind or want to create something entirely unique, our team is here to bring your vision to life. You can share pictures, sketches, or browse our portfolio for inspiration, and we'll collaborate with you to craft the perfect cake for your special occasion.</p>
                         </div>
@@ -69,7 +70,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-2" aria-expanded="false" aria-controls="accordion-2 .item-2">How do I place an Order?&nbsp;</button></h2>
                     <div class="accordion-collapse collapse item-2" role="tabpanel" data-bs-parent="#accordion-2">
-                        <div class="accordion-body"><a href="contacts.html">
+                        <div class="accordion-body"><a href="contactus.html">
                                 <p class="mb-0" style="color: rgb(0,0,0);">Just send us a message on any of our social media accounts, viber, or email!</p>
                             </a></div>
                     </div>
@@ -118,18 +119,48 @@
             <h2 style="font-family: Lobster, serif;margin-top: 21px;">Delivery and Pickup</h2>
             <div class="accordion" role="tablist" id="accordion-3">
                 <div class="accordion-item">
-                    <h2 class="accordion-header" role="tab"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-3 .item-1" aria-expanded="true" aria-controls="accordion-3 .item-1">Do you offer delivery services, and what are your delivery policies?</button></h2>
-                    <div class="accordion-collapse collapse show item-1" role="tabpanel" data-bs-parent="#accordion-3">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-3 .item-1" aria-expanded="false" aria-controls="accordion-3 .item-1">Do you offer delivery services, and what are your delivery policies?</button></h2>
+                    <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-3">
                         <div class="accordion-body">
                             <p class="mb-0">Yes, we provide delivery services <strong>across Metro Manila</strong>. However, we are not affiliated with any app or delivery service. We use Lalamove, a third-party service, and delivery fees may vary depending on your location. Please send us your delivery details for quotation. Do take note that once your order is handed over to the driver, we are no longer responsible for any damages.<br><br><strong>Additionally, please be aware of the following:</strong><br>- Estimated arrival times may vary due to factors like traffic and weather conditions, and the availability of the rider once dispatched. We can provide an approximate ETA for your delivery.<br><br>- If the rider requests additional fees not communicated by us, you have the right to refuse. The final delivery fee will be confirmed with you before booking.<br><br>- <strong>Please note:</strong> We utilize <strong>Lalamove </strong>as our third-party service provider for deliveries. It’s important to be aware that Lalamove’s riders may engage in double booking. Once your item is in transit, it is no longer under our direct control. While we schedule deliveries as early as possible, exact arrival times depend on the rider’s schedule. For urgent orders, feel free to contact the rider directly to inquire about their current location and estimated time of arrival (ETA).</p>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-3 .item-2" aria-expanded="false" aria-controls="accordion-3 .item-2">Do you offer customized cake designs?</button></h2>
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-3 .item-2" aria-expanded="false" aria-controls="accordion-3 .item-2">Can I pick up my order instead?</button></h2>
                     <div class="accordion-collapse collapse item-2" role="tabpanel" data-bs-parent="#accordion-3">
                         <div class="accordion-body">
-                            <p class="mb-0">Absolutely! We specialize in creating customized cake designs tailored to your preferences. Whether you have a specific theme in mind or want to create something entirely unique, our team is here to bring your vision to life. You can share pictures, sketches, or browse our portfolio for inspiration, and we'll collaborate with you to craft the perfect cake for your special occasion.</p>
+                            <p class="mb-0">Yes, you can choose to pick up your order from us. We’ll provide you with the pickup details and ensure that your order is ready at the agreed-upon time. Please do take note that certain cakes/pastries are only allowed for transport using air-conditioned vehicles.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h2 style="font-family: Lobster, serif;margin-top: 21px;">Payment and Policies</h2>
+            <div class="accordion" role="tablist" id="accordion-4">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-4 .item-1" aria-expanded="false" aria-controls="accordion-4 .item-1">What payment methods do you accept?</button></h2>
+                    <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-4">
+                        <div class="accordion-body">
+                            <p class="mb-0">We accept Gcash and BDO bank transfers.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h2 style="font-family: Lobster, serif;margin-top: 21px;">Product</h2>
+            <div class="accordion" role="tablist" id="accordion-5">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-5 .item-1" aria-expanded="false" aria-controls="accordion-5 .item-1">How should I store my cake or pastries after I pick them up or when they are delivered?</button></h2>
+                    <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-5">
+                        <div class="accordion-body">
+                            <p class="mb-0"><strong>For Icing cakes:</strong> Icing cakes should be refrigerated in their original box to maintain freshness, especially if they contain perishable ingredients like fresh fruit or cream. Once the cake is sliced, it needs to be stored in an airtight container.<br><br><strong>For fondant cakes:</strong> Fondant cakes should be stored in an air-conditioned room in their original box. Once the cake is sliced, it needs to be refrigerated and stored in an airtight container.<br><br><strong>For pastries and other items:</strong> Pastries and other products should be stored in an airtight container. Depending on the type, they can be kept at room temperature or refrigerated. Please refer to specific product instructions for optimal storage conditions.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-5 .item-2" aria-expanded="false" aria-controls="accordion-5 .item-2">How long will the cake or pastries stay fresh?</button></h2>
+                    <div class="accordion-collapse collapse item-2" role="tabpanel" data-bs-parent="#accordion-5">
+                        <div class="accordion-body">
+                            <p class="mb-0">Most cakes and pastries are best enjoyed within 2-3 days of purchase. For specific storage instructions and shelf life, please refer to the guide instructions provided with your order or contact us for details.</p>
                         </div>
                     </div>
                 </div>
@@ -142,9 +173,9 @@
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Services</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Custom Orders</a></li>
-                        <li><a href="#">Pastries</a></li>
-                        <li><a href="#">Party Carts &amp; Events</a></li>
+                        <li><a href="customorders.html">Custom Orders</a></li>
+                        <li><a href="pastries.html">Pastries</a></li>
+                        <li><a href="events.html">Party Carts &amp; Events</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
@@ -157,9 +188,9 @@
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Others</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Blogs</a></li>
+                        <li><a href="blogs.html">Blogs</a></li>
                         <li><a href="faq.html">FAQ</a></li>
-                        <li><a href="contacts.html">Contact Us</a></li>
+                        <li><a href="contactus.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
@@ -185,7 +216,6 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/bold-and-bright.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-baguetteBox.min.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-Lightbox-Gallery.js"></script>
