--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 
 <body>
     <nav class="navbar navbar-expand-md sticky-top bg-primary navbar-shrink py-3 navbar-light" id="mainNav" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><img src="assets/img/brands/NewLogo.png" style="height: 55px;" width="59" height="55"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"><img src="assets/img/brands/Hat.png" width="40" height="40"></span><span style="padding-left: 0px;margin-left: 5px;">TLB Kitchen</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link link-light active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link-light pricing-nav" href="pricing.html">Pricing</a></li>
-                    <li class="nav-item"><a class="nav-link active link-light" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
-                </ul><a class="btn btn-secondary link-light shadow" role="button" href="contacts.html">Contact Us</a>
+                    <li class="nav-item"><a class="nav-link link-light pricing-nav" href="specialties.html">Specialties</a></li>
+                    <li class="nav-item"><a class="nav-link link-light" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="blogs.html"><span style="color: rgb(255, 255, 255);">Blogs</span></a></li>
+                </ul><a class="btn btn-secondary link-light shadow" role="button" href="contactus.html">Contact Us</a>
             </div>
         </div>
     </nav>
@@ -38,7 +39,7 @@
                         <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-6 offset-lg-5 offset-xl-6" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.8);">
                             <div class="text-center text-md-start text-lg-start text-xl-start text-xxl-start" style="max-width: 350px;">
                                 <h1 class="fw-bold" style="font-family: Lobster, serif;">The Little Baker Kitchen</h1>
-                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);">We specialize in crafting delicious pastries and custom cakes for your special occasions.</p><a class="btn btn-primary btn-lg me-2" role="button" href="index.html#about-us">View Portfolio</a>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);">We specialize in crafting delicious pastries and custom cakes for your special occasions.</p><a class="btn btn-primary btn-lg me-2" role="button" href="customorders.html">View Portfolio</a>
                             </div>
                         </div>
                     </div>
@@ -50,7 +51,7 @@
                         <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4 offset-sm-1 offset-md-2 offset-lg-5 offset-xl-6" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.8);">
                             <div class="text-center text-lg-start text-xl-start text-xxl-start" style="max-width: 420px;">
                                 <h1 class="fw-bold" style="font-family: Lobster, serif;">Custom Cakes and Pastries</h1>
-                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><span style="color: rgb(0, 0, 0); background-color: transparent;">Choose from our vast selection of&nbsp;designs or create your own!</span></p><a class="btn btn-primary me-2" role="button" href="#" style="margin-top: 11px;">View Pastries</a><a class="btn btn-primary me-2" role="button" href="#" style="margin-top: 11px;">View Designs</a>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><span style="color: rgb(0, 0, 0); background-color: transparent;">Choose from our vast selection of&nbsp;designs or create your own!</span></p><a class="btn btn-primary me-2" role="button" href="pastries.html" style="margin-top: 11px;">View Pastries</a><a class="btn btn-primary me-2" role="button" href="customorders.html" style="margin-top: 11px;">View Designs</a>
                             </div>
                         </div>
                     </div>
@@ -62,7 +63,7 @@
                         <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-5 offset-sm-2 offset-md-6 offset-lg-6" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.8);">
                             <div class="text-center text-md-start text-lg-start text-xl-start text-xxl-start" style="max-width: 370px;">
                                 <h1 class="fw-bold" style="font-family: Lobster, serif;">Perfect for Any Occasion</h1>
-                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong>We're excited to help make your celebration extra special.</strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">View Party Carts</a>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong>We're excited to help make your celebration extra special.</strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="events.html">View Party Carts</a>
                             </div>
                         </div>
                     </div>
@@ -74,7 +75,7 @@
                         <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 offset-sm-2 offset-md-6 offset-lg-5 offset-xl-6" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.8);">
                             <div class="text-center text-md-start text-lg-start text-xl-start text-xxl-start" style="max-width: 380px;">
                                 <h1 class="fw-bold" style="font-family: Lobster, serif;">Ready to plan your event?</h1>
-                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong>Just send us a message on any of our social media accounts, viber, or email.</strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="contacts.html">Contact Us!</a>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong>Just send us a message on any of our social media accounts, viber, or email.</strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="contactus.html">Contact Us!</a>
                             </div>
                         </div>
                     </div>
@@ -104,7 +105,7 @@
                         <div><a class="carousel-control-prev" href="#carousel-2" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-2" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
                         <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-2" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="3"></button></div>
                     </div>
-                    <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="pricing.html">Custom Orders</a></div>
+                    <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="customorders.html">Custom Orders</a></div>
                 </div>
             </div>
             <div class="col">
@@ -119,7 +120,7 @@
                         <div><a class="carousel-control-prev" href="#carousel-3" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-3" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
                         <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-3" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-3" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-3" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-3" data-bs-slide-to="3"></button></div>
                     </div>
-                    <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="pricing.html">Pastries</a></div>
+                    <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="pastries.html">Pastries</a></div>
                 </div>
             </div>
             <div class="col-lg-6 offset-md-3 offset-lg-3 offset-xl-0">
@@ -134,7 +135,7 @@
                         <div><a class="carousel-control-prev" href="#carousel-4" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-4" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
                         <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-4" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-4" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-4" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-4" data-bs-slide-to="3"></button></div>
                     </div>
-                    <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="pricing.html">Party Carts &amp; Events</a></div>
+                    <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="events.html">Party Carts &amp; Events</a></div>
                 </div>
             </div>
         </div>
@@ -148,7 +149,7 @@
                 </div>
             </div>
             <div class="col-11 col-sm-8 col-md-6 col-lg-5 col-xl-5 offset-1 offset-sm-2 offset-md-0 offset-lg-0">
-                <div class="m-xl-5"><img class="rounded img-fluid d-block fit-cover" style="height: 500px" src="assets/img/products/74FADB63-86B7-473E-91DF-73F213F7E45D.jpeg" width="336" height="500"></div>
+                <div class="m-xl-5"><img class="rounded img-fluid d-block fit-cover" style="height: 500px" src="assets/img/products/selfie.jpeg" width="336" height="500"></div>
             </div>
         </div>
     </div>
@@ -163,7 +164,7 @@
             <div class="col-md-12 col-lg-6 d-md-flex align-items-md-center">
                 <div class="text-center text-sm-center text-md-center">
                     <h2 class="fw-bold text-md-center" style="padding-top: 0px;margin-top: 12px;font-family: Lobster, serif;">Customize a Cake from Scratch</h2>
-                    <p class="my-3">Explore our portfolio of unique creations and designs to inspire your custom order. Whether you have a specific design in mind or need some ideas, we’re here to bring your vision to life. Browse through our works and let’s create something special together!</p><a class="btn btn-lg me-2 link-light btn-secondary" role="button" href="product.html">View Our Portfolio</a>
+                    <p class="my-3">Explore our portfolio of unique creations and designs to inspire your custom order. Whether you have a specific design in mind or need some ideas, we’re here to bring your vision to life. Browse through our works and let’s create something special together!</p><a class="btn btn-lg me-2 link-light btn-secondary" role="button" href="customorders.html">View Our Portfolio</a>
                 </div>
             </div>
         </div>
@@ -885,9 +886,9 @@
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Services</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Custom Orders</a></li>
-                        <li><a href="#">Pastries</a></li>
-                        <li><a href="#">Party Carts &amp; Events</a></li>
+                        <li><a href="customorders.html">Custom Orders</a></li>
+                        <li><a href="pastries.html">Pastries</a></li>
+                        <li><a href="events.html">Party Carts &amp; Events</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
@@ -900,9 +901,9 @@
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Others</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Blogs</a></li>
+                        <li><a href="blogs.html">Blogs</a></li>
                         <li><a href="faq.html">FAQ</a></li>
-                        <li><a href="contacts.html">Contact Us</a></li>
+                        <li><a href="contactus.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
@@ -929,7 +930,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/smart-forms.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/bold-and-bright.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-baguetteBox.min.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-Lightbox-Gallery.js"></script>
