--- a/pastries.html
+++ b/pastries.html
@@ -5,10 +5,9 @@
     <meta charset="utf-8">
 <link rel="icon" type="image/x-icon" href="./Transparent Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Product - The Little Baker Kitchen</title>
+    <title>Pastries - The Little Baker Kitchen</title>
     <link rel="icon" type="image/png" sizes="4200x3000" href="assets/img/brands/Transparent%20Logo.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.reflowhq.com/v2/toolkit.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Chelsea+Market&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&amp;display=swap">
@@ -21,19 +20,70 @@
 
 <body>
     <nav class="navbar navbar-expand-md sticky-top bg-primary navbar-shrink py-3 navbar-light" id="mainNav" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><img src="assets/img/brands/NewLogo.png" style="height: 55px;" width="59" height="55"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"><img src="assets/img/brands/Hat.png" width="40" height="40"></span><span style="padding-left: 0px;margin-left: 5px;">TLB Kitchen</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link link-light" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link-light pricing-nav" href="pricing.html">Pricing</a></li>
-                    <li class="nav-item"><a class="nav-link active link-light" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
-                </ul><a class="btn btn-secondary link-light shadow" role="button" href="contacts.html">Contact Us</a>
+                    <li class="nav-item"><a class="nav-link link-light pricing-nav" href="specialties.html">Specialties</a></li>
+                    <li class="nav-item"><a class="nav-link link-light" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="blogs.html"><span style="color: rgb(255, 255, 255);">Blogs</span></a></li>
+                </ul><a class="btn btn-secondary link-light shadow" role="button" href="contactus.html">Contact Us</a>
             </div>
         </div>
     </nav>
     <section class="py-5">
-        <div class="container py-5">
-            <div data-reflow-type="product" data-bss-dynamic-product="" data-bss-dynamic-product-param="product" data-reflow-shoppingcart-url="shopping-cart.html"></div>
+        <div class="container py-4 py-xl-5">
+            <div class="row mb-5">
+                <div class="col-md-10 col-xl-10 text-center mx-auto">
+                    <h1 style="font-family: Lobster, serif;">Pastries</h1>
+                    <p class="w-lg-50">Explore our delicious pastries. From classics to unique treats, find the perfect indulgence for any occasion. At The Little Baker Kitchen, we also specialize in customizing pastries to suit your preferences and special requests, simply send us a message! Enjoy happiness, one pastry at a time.</p>
+                </div>
+                <div class="col-lg-4 offset-lg-4 text-center"><a class="btn btn-outline-primary" role="button" href="thelittlebakerkitchen.cococart.co">Order Here!</a></div>
+            </div>
+            <h1 class="text-center" style="font-family: Lobster, serif;">Category Name</h1>
+            <div class="row gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
+                <div class="col-lg-4 col-xl-3">
+                    <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px;" src="assets/img/products/Custom_Orders_3.jpg">
+                        <div class="py-4">
+                            <h4 class="text-center">Lorem libero donec</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-3">
+                    <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px;" src="assets/img/products/Custom%20Orders%202.jpg">
+                        <div class="py-4">
+                            <h4 class="text-center">Lorem libero donec</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-3">
+                    <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px;" src="assets/img/products/Home_Page_2.jpg">
+                        <div class="py-4">
+                            <h4 class="text-center">Lorem libero donec</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-3">
+                    <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px;" src="assets/img/products/Testimonial13.jpg">
+                        <div class="py-4">
+                            <h4 class="text-center">Lorem libero donec</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center">
+            <nav>
+                <ul class="pagination">
+                    <li class="page-item"><a class="page-link" aria-label="Previous" href="#"><span aria-hidden="true">«</span></a></li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#">4</a></li>
+                    <li class="page-item"><a class="page-link" href="#">5</a></li>
+                    <li class="page-item"><a class="page-link" aria-label="Next" href="#"><span aria-hidden="true">»</span></a></li>
+                </ul>
+            </nav>
         </div>
     </section>
     <footer class="bg-primary-gradient">
@@ -42,9 +92,9 @@
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Services</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Custom Orders</a></li>
-                        <li><a href="#">Pastries</a></li>
-                        <li><a href="#">Party Carts &amp; Events</a></li>
+                        <li><a href="customorders.html">Custom Orders</a></li>
+                        <li><a href="pastries.html">Pastries</a></li>
+                        <li><a href="events.html">Party Carts &amp; Events</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
@@ -57,9 +107,9 @@
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Others</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Blogs</a></li>
+                        <li><a href="blogs.html">Blogs</a></li>
                         <li><a href="faq.html">FAQ</a></li>
-                        <li><a href="contacts.html">Contact Us</a></li>
+                        <li><a href="contactus.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
@@ -85,8 +135,6 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.reflowhq.com/v2/toolkit.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/bold-and-bright.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-baguetteBox.min.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-Lightbox-Gallery.js"></script>
