--- a/specialties.html
+++ b/specialties.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 <link rel="icon" type="image/x-icon" href="./Transparent Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>About Us - The Little Baker Kitchen</title>
+    <title>Pricing - The Little Baker Kitchen</title>
     <link rel="icon" type="image/png" sizes="4200x3000" href="assets/img/brands/Transparent%20Logo.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link link-light" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link-light pricing-nav" href="specialties.html">Specialties</a></li>
+                    <li class="nav-item"><a class="nav-link link-light active pricing-nav" href="specialties.html">Specialties</a></li>
                     <li class="nav-item"><a class="nav-link link-light" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="blogs.html"><span style="color: rgb(255, 255, 255);">Blogs</span></a></li>
                 </ul><a class="btn btn-secondary link-light shadow" role="button" href="contactus.html">Contact Us</a>
@@ -32,45 +32,59 @@
         </div>
     </nav>
     <section class="py-5">
-        <div class="container py-5">
-            <div class="row mb-4 mb-lg-5">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h1 class="fw-bold" style="font-family: Lobster, serif;">About Us</h1>
+        <div class="container py-4 py-xl-5">
+            <div class="row mb-5">
+                <div class="col-md-10 col-xl-6 text-center mx-auto">
+                    <h1 style="font-family: Lobster, serif;">What We Specialize In</h1>
+                    <p class="w-lg-50"><span style="color: rgb(0, 0, 0); background-color: transparent;">We're excited to help make your celebration extra special. Whether you're looking for custom cakes, delectable desserts, or planning a party, we've got you covered!</span></p>
                 </div>
             </div>
-            <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
-                <div class="col-sm-10 col-lg-6 col-xl-5 offset-sm-1 offset-md-0 offset-lg-0 text-center mb-5"><img class="rounded img-fluid shadow" src="assets/img/products/selfie.jpg" style="height: 300px;"></div>
-                <div class="col-xl-7 d-md-flex align-items-md-end align-items-lg-center mb-5">
+            <div class="row gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
+                <div class="col">
                     <div>
-                        <h5 class="fw-bold">Hi! I’m Chef Brent, head decorator, and owner of The Little Baker Kitchen.<br><br><span style="font-weight: normal !important;">I discovered my love for baking at the age of 10 and started selling my pastries when I was 12, which marked the humble beginning of “The Little Baker Kitchen”.</span></h5>
+                        <div class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000" data-bs-pause="false" id="carousel-2">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/IMG_3958.jpg"></div>
+                                <div class="carousel-item"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/Custom%20Orders%202.jpg"></div>
+                                <div class="carousel-item"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/Custom_Orders_3.jpg"></div>
+                                <div class="carousel-item"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/reviews3.jpg"></div>
+                            </div>
+                            <div><a class="carousel-control-prev" href="#carousel-2" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-2" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
+                            <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-2" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="3"></button></div>
+                        </div>
+                        <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="customorders.html">Custom Orders</a></div>
                     </div>
                 </div>
-            </div>
-            <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
-                <div class="col-md-7 col-lg-6 col-xl-5 offset-lg-0 offset-xl-1 text-center order-md-last mb-5"><img class="rounded img-fluid shadow" src="assets/img/products/aboutus2.jpg" style="height: 300px;"></div>
-                <div class="col-md-5 col-lg-6 col-xl-6 offset-lg-0 d-md-flex align-self-center align-items-md-end align-items-lg-center mb-5">
-                    <h5 class="fw-bold">Since then, I’ve passionately pursued my baking journey, perfecting recipes and creating delightful treats that bring joy to others.</h5>
-                    <div></div>
-                </div>
-            </div>
-            <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
-                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-5 offset-lg-1 offset-xl-0 text-center mb-5"><img class="rounded img-fluid shadow" src="assets/img/products/aboutus3.png" width="276" height="402"></div>
-                <div class="col-md-8 col-lg-6 col-xl-7 offset-lg-1 offset-xl-0 d-md-flex align-items-md-end align-items-lg-center mb-5">
+                <div class="col">
                     <div>
-                        <h5 class="fw-bold">I recently had the honor of representing the Philippines when I turned 19, at the Juniores World Pastry Cup 2024 held in Italy, where chefs under 23 from around the world showcased their artistic creations. <br><br>Team Philippines secured 5th place, and it was an incredible experience to be part of such a prestigious competition.</h5>
+                        <div class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000" data-bs-pause="false" id="carousel-3">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/IMG_7181.jpg"></div>
+                                <div class="carousel-item"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/Pastries_2.jpg"></div>
+                                <div class="carousel-item"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/Pastries_3.jpg"></div>
+                                <div class="carousel-item"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/Pastries_4.jpg"></div>
+                            </div>
+                            <div><a class="carousel-control-prev" href="#carousel-3" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-3" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
+                            <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-3" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-3" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-3" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-3" data-bs-slide-to="3"></button></div>
+                        </div>
+                        <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="pastries.html">Pastries</a></div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-    <section class="py-4 py-xl-5">
-        <div class="container">
-            <div class="text-white bg-primary border rounded border-0 border-primary d-flex flex-column justify-content-between flex-lg-row p-4 p-md-5">
-                <div class="pb-2 pb-lg-1">
-                    <h4 class="fw-bold mb-2">I’m thrilled to share my passion for baking with you!</h4>
-                    <p class="mb-0">Together, let’s turn your dream celebration into reality!</p>
+                <div class="col-lg-6 offset-md-3 offset-lg-3 offset-xl-0">
+                    <div>
+                        <div class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000" data-bs-pause="false" id="carousel-4">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/Party_Cart_1.jpg"></div>
+                                <div class="carousel-item"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/Party_Cart_2.jpg"></div>
+                                <div class="carousel-item"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/Party_Cart_3.jpg"></div>
+                                <div class="carousel-item"><img class="w-100 d-block rounded img-fluid d-block w-100 fit-cover" style="height: 500px" src="assets/img/products/Party_Cart_4.jpg"></div>
+                            </div>
+                            <div><a class="carousel-control-prev" href="#carousel-4" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-4" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
+                            <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-4" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-4" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-4" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-4" data-bs-slide-to="3"></button></div>
+                        </div>
+                        <div class="text-center py-4"><a class="btn btn-outline-primary btn-lg" role="button" href="events.html">Party Carts &amp; Events</a></div>
+                    </div>
                 </div>
-                <div class="my-2"><a class="btn btn-light fs-5 py-2 px-4" role="button" href="contactus.html">Contact Us</a></div>
             </div>
         </div>
     </section>
