--- a/pastries.html
+++ b/pastries.html
@@ -42,28 +42,28 @@
             </div>
             <h1 class="text-center" style="font-family: Lobster, serif;">Category Name</h1>
             <div class="row gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
-                <div class="col-lg-4 col-xl-3">
-                    <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px;" src="assets/img/products/Custom_Orders_3.jpg">
+                <div class="col-6 col-md-4 col-lg-4 col-xl-3">
+                    <div class="text-center"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Custom_Orders_3.jpg" width="330" height="400">
+                        <div class="py-4">
+                            <h6 class="text-center">Lorem libero donec</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xl-3">
+                    <div><img class="rounded img-fluid d-block w-100 fit-cover" style="/*height: 400px;*/" src="assets/img/products/Custom%20Orders%202.jpg">
                         <div class="py-4">
                             <h4 class="text-center">Lorem libero donec</h4>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-xl-3">
-                    <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px;" src="assets/img/products/Custom%20Orders%202.jpg">
+                <div class="col-sm-6 col-lg-4 col-xl-3">
+                    <div><img class="rounded img-fluid d-block w-100 fit-cover" style="/*height: 400px;*/" src="assets/img/products/Home_Page_2.jpg">
                         <div class="py-4">
                             <h4 class="text-center">Lorem libero donec</h4>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-xl-3">
-                    <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px;" src="assets/img/products/Home_Page_2.jpg">
-                        <div class="py-4">
-                            <h4 class="text-center">Lorem libero donec</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-xl-3">
+                <div class="col-sm-6 col-lg-4 col-xl-3">
                     <div><img class="rounded img-fluid d-block w-100 fit-cover" style="height: 400px;" src="assets/img/products/Testimonial13.jpg">
                         <div class="py-4">
                             <h4 class="text-center">Lorem libero donec</h4>
@@ -101,7 +101,7 @@
                     <h3 class="fs-6 fw-bold">About</h3>
                     <ul class="list-unstyled">
                         <li><a href="aboutus.html">Our Story</a></li>
-                        <li><a href="index.html#testimonials">Testimonials</a></li>
+                        <li><a href="testimonials.html">Testimonials</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
