--- a/specialties.html
+++ b/specialties.html
@@ -103,7 +103,7 @@
                     <h3 class="fs-6 fw-bold">About</h3>
                     <ul class="list-unstyled">
                         <li><a href="aboutus.html">Our Story</a></li>
-                        <li><a href="index.html#testimonials">Testimonials</a></li>
+                        <li><a href="testimonials.html">Testimonials</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
